applications/mindspore-repo-post-verify/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-repo-post-verify
  name: mindspore-repo-post-verify
