applications/mindspore-repo-post-verify/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: repo-post-verify-service
  namespace: mindspore-repo-post-verify
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 907fdfe6-e7a9-4e42-9efb-1f93faf966c0
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: repo-post-verify
  type: LoadBalancer
