applications/mindspore-repo-post-verify/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/whitelist-source-range: 121.37.228.245,139.159.203.30,139.9.203.63
  name: mindspore-publish-ingress
  namespace: mindspore-repo-post-verify
spec:
  tls:
  - hosts:
      - publish.mindspore.cn
    secretName: mindspore-publish-tls
  rules:
    - host: publish.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: repo-post-verify-service
              servicePort: 8080
            path: /
